# cblackjack

./: .project  CMakeLists.txt  README.md
cmake/: Doxyfile.in  Doxygen.cmake
include/: blackjack.h
src/: CMakeLists.txt  blackjack.c  card.c  deck.c  main.c  player.c
test/: CMakeLists.txt  blackjack_test.cpp  card_test.cpp  deck_test.cpp  player_test.cpp
